# resights-ownership-structure-calculator

./: README.md  devbox.json  pyproject.toml
data/raw/: CasaAS.json  ResightsApS.json
src/resights_ownership_structure_calculator/: __init__.py  main.py  models.py
src/resights_ownership_structure_calculator/commands/: ownerships.py  validate.py
src/resights_ownership_structure_calculator/utils/: validate.py
tests/: conftest.py  fixtures.py  test_models.py
