[project]
name = "resights-ownership-structure-calculator"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pydantic>=2.11.4",
    "orjson>=3.10.18",
    "dotenv>=0.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/resights_ownership_structure_calculator"]
