[project]
name = "resights-ownership-structure-calculator"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pydantic>=2.11.4",
    "orjson>=3.10.18",
    "dotenv>=0.9.9",
    "typer>=0.15.3",
    "mypy>=1.15.0",
    "networkx>=3.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/resights_ownership_structure_calculator"]

[tool.rye.scripts]
cli = { call = "resights_ownership_structure_calculator.commands.cli:app" }
test = "pytest"
lint = "ruff check ."
format = "black ."
typecheck = "mypy ."

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
